# soemdsp-sandbox-clap

./: .gitignore  .gitmodules  README.md  VACTROLS.md  server.py
.claude/: launch.json
clap-plugin/: soemdsp_dsp_proof.cpp  soemdsp_gui_proof.cpp  soemdsp_minimal.cpp  soemdsp_sandbox_gui_proof.cpp
docs/: ADDING_HARDCODED_SANDBOX_MODULE.md  FUTURE_PLANNING.md  LAST_BIG_PLAN.md  OSC_MODULE_NON_UI_REFERENCE.md  PLAN_2_MODULE_IO_SECTION.md  SIMD_BRANCH.md  WEBUI_CLAP_HOST_PLAN.md
public/: app.js  boot-loading.js  index.html  native-modules-catalog.json  node-graph-antisaw.js  node-graph-av-export.js  node-graph-bootstrap.js  node-graph-bradley-2a.js  node-graph-camera-view.js  node-graph-canvas-script.js  node-graph-chord-sequencer.js  node-graph-clap-host.js  node-graph-code-screen.js  node-graph-context-menu.js  node-graph-cookbook-filter.js  node-graph-data-bus.js  node-graph-default-buttons.js  node-graph-default-patch.js  node-graph-default-preset.js  node-graph-dsf-oscillator.js  node-graph-ear-protection.js  node-graph-event-bindings.js  node-graph-execution-debug-api.js  node-graph-execution-debug-view.js  node-graph-execution-plan.js  node-graph-execution-wires.js  node-graph-external-ui-events.js  node-graph-file-actions.js  node-graph-floating-windows.js  node-graph-ghost-sliders.js  node-graph-gpu-additive-backend.js  node-graph-graph-utils.js  node-graph-grid-utils.js  node-graph-header-event-bindings.js  (+84 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: soemdsp-server.spec
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+270 files in other folders)
